v1.7.29 (09/12/2020)
- bug fix: syntax error in XChemDeposit

v1.7.28 (25/11/2020)
- added exception to catch 'Cannot allocate memory' error in XChemMain.get_gda_barcodes

v1.7.27 (24/11/2020)
- bug fix: add missing DataProcessingUniqueReflectionsLow/High column to db

v1.7.26 (12/11/2020)
- XChemDeposit: remove \n and \r from smiles string in _diffrn.details

v1.7.25 (11/11/2020)
- convert json logfile from dials into pseudo aimless file for mmcif file preparation (required for pdb-extract)

v1.7.24 (02/11/2020)
- capitalized organism names in NCBI_taxonomy_ID dictionary

v1.7.23 (02/11/2020)
- pandda refinement: stopped sourcing obsolete pandda v0.2.12 at DLS (otherwise refinement update script fails due to missing gemmi library)

v1.7.22 (28/10/2020)
- cosmetic changes to deposition interface
- bug fix: make event map assignment during MMCIF preparation backward compatible
- bug fix: finding of event map with highest CC for given ligand

v1.7.21 (19/10/2020)
- bug fix: use default CCP4 for giant.merge_conformations

v1.7.20 (16/10/2020)
- bug fix: remove undocumented and faulty changes to RunQuickRefine

v1.7.19 (12/10/2020)
- bug fix: use 'module load ccp4/7.0.072' for pandda.analyse, but 'module load ccp4' (i.e. v7.1) for pre-run ground-state selection at DLS

v1.7.18 (12/10/2020)
- bug fix: added missing 'module load ccp4' statement when generating pandda.analyse shell script at DLS

v1.7.17 (09/10/2020)
- bug fix: corrected positions of ignore checkboxes in pandda.analyse

v1.7.16 (08/10/2020)
- enable export of selected datasets with pandda.export
- glitch fix: remove hydrogens before saving model for buster refinement (causes problems during ligand occupancy refinement)
- XChemRefine: removed "-q medium.q" option for non-DLS refinement
- added helper script to which reverts to last successful non-pandda refinement
- XChemCoot (pandda refinement): reading of (2)fofc.maps disabled because Coot 0.9 does not handle P1 maps well