@@ -1,5 +1,6 @@
 v1.7.29 (09/12/2020)
 - bug fix: syntax error in XChemDeposit
+- XChemDeposit: use default pdb_extract if no installation in XChemExplorer_dir
 
 v1.7.28 (25/11/2020)
 - added exception to catch 'Cannot allocate memory' error in XChemMain.get_gda_barcodes
